<resources>
    <string name="app_main_name">Lamse App</string>
    <string name="cancel">取消</string>
    <string name="confirm">确认</string>
    <string name="hint_plz_input">请输入…</string>
    <string name="lack_of_needed_permission">缺少必要的权限</string>
    <string name="alert_tip_title">温馨提示</string>
    <string name="desc_request_camera_audio_permission">为了保证相关功能的正常使用，将向您申请相机与存储权限</string>
    <string name="desc_request_camera_permission">为了保证相关功能的正常使用，将向您申请相机权限</string>
    <string name="title_new_version_content">更新内容：</string>
    <string name="upgrade_now">立即更新</string>
    <string name="no_install_permission">缺少安装权限</string>
    <string name="download_failure">下载失败</string>
    <string name="install_failure">安装失败</string>
    <string name="birth_date">出生日期</string>
    <string name="desc_request_ble_phone_permission">为了正常搜索并连接设备，同时为满足设备的功能使用需要，需要申请蓝牙、定位和读取手机状态权限</string>
    <string name="desc_ble_not_open">未开启蓝牙开关，无法使用相关功能</string>
    <string name="desc_request_ble_for_device">为了保证设备功能的正常使用，请同意开启蓝牙开关</string>
    <string name="no_ble_function">你的设备不支持蓝牙，不能使用蓝牙相关功能</string>
    <string name="request_location_for_device">为了保证设备功能的正常使用，请先开启位置信息开关</string>
    <string name="plz_input_phone_num">请输入手机号</string>
    <string name="plz_input_auth_code">请输入验证码</string>
    <string name="get_auth_code">获取验证码</string>
    <string name="loginOrRegister">登录/注册</string>
    <string name="app_slogan">APP SLOGAN</string>
    <string name="password_login">密码登录</string>
    <string name="plz_read_and_agree">同时请您阅读并同意</string>
    <string name="user_protcol">《用户协议》</string>
    <string name="and">与</string>
    <string name="privacy_policy">《隐私政策》</string>
    <string name="other_login_method">其他登录方式</string>
    <string name="plz_input_password">请输入密码</string>
    <string name="finish_info">完善信息</string>
    <string name="plz_input">请输入…</string>
    <string name="name">姓名</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="tip_plz_input_real_health_info">填写真实信息才能过准确分析您的健康</string>
    <string name="auth_code_login">验证码登录</string>
    <string name="measure">测量</string>
    <string name="home_page">首页</string>
    <string name="mine">我的</string>
    <string name="i_read_and_agree">我已阅读并同意</string>
    <string name="auth_code_send">验证码已发送</string>
    <string name="get_again_after_second">秒后再次获取</string>
    <string name="plz_input_correct_phone">请输入正确的手机号</string>
    <string name="gender">性别</string>
    <string name="height">身高</string>
    <string name="weight">体重</string>
    <string name="quit_if_again">再操作一次退出</string>
    <string name="plz_agree_agreement_first">请查看并勾选同意《用户协议》与《隐私政策》</string>
    <string name="finish">完成</string>
    <string name="commit">提交</string>
    <string name="operating">操作中…</string>
    <string name="not_installed_wechat">请先下载并安装微信</string>
    <string name="not_support_yet">暂不支持</string>
    <string name="m62">腰围</string>
    <string name="confirm_quit_app">确认退出APP吗？</string>
    <string name="next_step">下一步</string>
    <string name="take_photo">拍照</string>
    <string name="gallery">相册</string>
    <string name="reject_and_quit">拒绝并退出</string>
    <string name="plz_input_name">请输入名称</string>
    <string name="desc_request_storage_permission">为了保证相关功能的正常使用，将向您申请存储权限</string>
    <string name="permissions_granted">权限已获取</string>
    <string name="save_failure">保存失败</string>
    <string name="long_press_to_speak">长按说话</string>
    <string name="request_permission_for_audio_record">为了确保录音及语音识别功能的正常使用，将向您申请录音权限</string>
    <string name="send_origin_voice">发送原语音</string>
    <string name="loose_to_send">松开发送</string>
    <string name="not_find_audio_content">未识别到语音内容</string>
    <string name="voice_being_recognized">正在识别语音内容…</string>
    <string name="set_pwd">设置密码</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="plz_input_password_again">请再次输入密码</string>
    <string name="confirm_password_not_same">两次密码不一致</string>
    <string name="set_pwd_success_then_login">密码设置成功，请重新登录</string>
    <string name="taking_photo">拍摄中…</string>
    <string name="date_select">日期选择</string>
</resources>