<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    android:overScrollMode="never">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/windowBg_1"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginTop="20dp"
            android:src="@mipmap/ic_app_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:shapeAppearance="@style/RoundCornerStyle10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/app_main_name"
            android:textColor="?attr/text_1"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/app_slogan"
            android:textColor="?attr/text_1"
            android:textSize="?attr/tsp20" />

        <TextView
            android:id="@+id/setPwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start"
            android:layout_marginStart="30dp"
            android:layout_marginTop="5dp"
            android:paddingVertical="5dp"
            android:text="注册未设置过密码的需去设置密码"
            android:textColor="?attr/text_4"
            android:textSize="?attr/tsp14"
            android:visibility="invisible"
            tools:visibility="visible" />

        <EditText
            android:id="@+id/editAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/selector_edit_r5"
            android:drawablePadding="5dp"
            android:gravity="center_vertical"
            android:hint="@string/plz_input_phone_num"
            android:inputType="number"
            android:maxLength="13"
            android:paddingHorizontal="20dp"
            android:paddingVertical="15dp"
            android:textColor="?attr/text_1"
            android:textSize="?attr/tsp18" />

        <FrameLayout
            android:id="@+id/authCodeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/authCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_edit_r5"
                android:gravity="center_vertical"
                android:hint="@string/plz_input_auth_code"
                android:inputType="number"
                android:maxLength="10"
                android:paddingHorizontal="20dp"
                android:paddingVertical="15dp"
                android:textColor="?attr/text_1"
                android:textSize="?attr/tsp18" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/getAuthCode"
                style="@style/XTTextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:text="@string/get_auth_code" />

        </FrameLayout>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/selector_edit_r5"
            android:drawablePadding="5dp"
            android:gravity="center_vertical"
            android:hint="@string/plz_input_password"
            android:inputType="textPassword"
            android:paddingHorizontal="20dp"
            android:paddingVertical="15dp"
            android:textColor="?attr/text_1"
            android:textSize="?attr/tsp18"
            android:visibility="gone" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/forgetPwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|start"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:paddingVertical="5dp"
                android:paddingEnd="10dp"
                android:text="@string/forget_pwd"
                android:textColor="?attr/text_1"
                android:textSize="?attr/tsp14"
                android:visibility="gone"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/switchLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:paddingVertical="5dp"
                android:paddingStart="10dp"
                android:text="@string/password_login"
                android:textColor="?attr/text_1"
                android:textSize="?attr/tsp14" />

        </FrameLayout>

        <TextView
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/ripple_login_button"
            android:gravity="center"
            android:paddingVertical="10dp"
            android:text="@string/loginOrRegister"
            android:textColor="?attr/text_1_rev"
            android:textSize="?attr/tsp18"
            app:layout_constraintTop_toBottomOf="@id/getAuthCode" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="40dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:visibility="gone">

            <View
                android:layout_width="0dp"
                android:layout_height="1px"
                android:layout_weight="1"
                android:background="?attr/divider_1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:text="@string/other_login_method"
                android:textColor="?attr/text_4"
                android:textSize="?attr/tsp14" />

            <View
                android:layout_width="0dp"
                android:layout_height="1px"
                android:layout_weight="1"
                android:background="?attr/divider_1" />

        </LinearLayout>

        <ImageView
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_marginTop="15dp"
            android:src="@mipmap/ic_wechat"
            android:visibility="gone" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <com.google.android.flexbox.FlexboxLayout
            android:id="@+id/agreeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginBottom="20dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            app:alignItems="center"
            app:flexWrap="wrap"
            app:justifyContent="center">

            <ImageView
                android:id="@+id/checkImg"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_unchecked" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plz_read_and_agree"
                android:textColor="?attr/text_1"
                android:textSize="?attr/tsp14" />

            <TextView
                android:id="@+id/protocol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_protcol"
                android:textColor="@color/color_important"
                android:textSize="?attr/tsp14" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/and"
                android:textColor="?attr/text_1"
                android:textSize="?attr/tsp14" />

            <TextView
                android:id="@+id/privacy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/privacy_policy"
                android:textColor="@color/color_important"
                android:textSize="?attr/tsp14" />

        </com.google.android.flexbox.FlexboxLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>