<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/windowBg_1"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/view_app_bar" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="?attr/tsp14"
        android:textColor="?attr/text_1"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:text="@string/get_auth_code" />

    <EditText
        android:id="@+id/editAccount"
        style="@style/XTEditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/selector_edit_r5"
        android:hint="@string/plz_input_phone_num"
        android:inputType="phone"
        android:paddingHorizontal="10dp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="15dp">

        <EditText
            android:id="@+id/authCode"
            style="@style/XTEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_edit_r5"
            android:hint="@string/plz_input_auth_code"
            android:inputType="number"
            android:maxLength="10"
            android:paddingHorizontal="10dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/getAuthCode"
            style="@style/XTTextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:text="@string/get_auth_code" />

    </FrameLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/nextStep"
        style="@style/XTFillButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="30dp"
        android:text="@string/next_step" />

</LinearLayout>