<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_round_rect_r10"
    android:elevation="0dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/alertTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="20dp"
        android:text="@string/alert_tip_title"
        android:textColor="?attr/text_1"
        android:textSize="?attr/tsp18"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/alertContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/desc_request_ble_phone_permission"
        android:textColor="?attr/text_4"
        android:textSize="?attr/tsp16" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="25dp"
        android:background="?attr/divider_1" />

    <LinearLayout
        android:id="@+id/bottomLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/shape_layout_divider"
        android:orientation="horizontal"
        android:showDividers="middle">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel"
            style="@style/XTTextButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingVertical="15dp"
            android:text="@string/cancel"
            android:textColor="?attr/text_4"
            android:textSize="?attr/tsp16"
            app:cornerRadius="0dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/confirm"
            style="@style/XTTextButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingVertical="15dp"
            android:text="@string/confirm"
            android:textSize="?attr/tsp16"
            app:cornerRadius="0dp" />

    </LinearLayout>

</LinearLayout>