<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/windowBg_1"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/view_app_bar" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="50dp"
        android:text="@string/plz_input_phone_num"
        android:textColor="?attr/text_1"
        android:textSize="28sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="5dp"
        android:text="@string/plz_input_phone_num"
        android:textColor="?attr/text_4"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/phoneInput"
        style="@style/XTRoundEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="53dp"
        android:hint="@string/plz_input_phone_num"
        android:inputType="phone" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="25dp">

        <EditText
            android:id="@+id/authCodeInput"
            style="@style/XTRoundEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/plz_input_auth_code"
            android:inputType="number"
            android:maxLength="6" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/getAuthCode"
            style="@style/XTTextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="5dp"
            android:background="@drawable/ripple_round_rect_r5"
            android:text="@string/get_auth_code"
            android:textColor="?attr/colorPrimary" />

    </FrameLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/nextStep"
        style="@style/XTFillButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="146dp"
        android:text="@string/next_step" />

</LinearLayout>