<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_round_rect_r5"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/date_select"
        android:textColor="?attr/text_1"
        android:textSize="18sp" />

    <FrameLayout
        android:id="@+id/pickerContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="?attr/divider_1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/shape_layout_divider"
        android:orientation="horizontal"
        android:showDividers="middle">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel"
            style="@style/XTTextButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textColor="?attr/text_4"
            app:cornerRadius="0dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/confirm"
            style="@style/XTTextButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/confirm"
            app:cornerRadius="0dp" />

    </LinearLayout>

</LinearLayout>